[package]
name = "unlock"
version = "0.0.10"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.65"
description = "Instrumented synchronization primitives helping you to unlock performance issues"
documentation = "https://docs.rs/unlock"
readme = "README.md"
homepage = "https://github.com/udoprog/unlock"
repository = "https://github.com/udoprog/unlock"
license = "MIT OR Apache-2.0"
keywords = ["mutex", "rwlock", "thread"]
categories = ["concurrency"]

[features]
default = ["parking_lot", "serde"]
trace = []

[dependencies]
num_cpus = "1.16.0"
parking_lot = { version = "0.12", optional = true }
serde = { version = "1.0.196", features = ["derive"], optional = true }

[package.metadata.docs.rs]
all-features = true
